--- a/main.css
+++ b/main.css
@@ -24,6 +24,9 @@
     .widthMPHoneH {
         width: 10rem !important;
     }
+    .widthIconM {
+        width: 4rem !important;
+    }
     #widthRC {
         width: 10rem !important;
     }
@@ -93,11 +96,11 @@
         width: 22vh !important;
         border-radius: 50%;
     }
-    .bg-colorMP {
-        height: 100vw !important;
+    .MPslide {
+        opacity: 0.9 !important;
     }
     .MPcarousel {
-        height: 23rem !important;
+        height: 26rem !important;
     }
     .MPcircle {
         width: 10px !important;
@@ -121,16 +124,16 @@
         top: 4px !important;
     }
     .stepper-item .step-counter {
-        width: 5px !important;
-        height: 5px !important;
+        width: 3px !important;
+        height: 3px !important;
         border-radius: 50%;
         border: 3px solid #ccc !important;
     }
     .stepper-item.completed .step-counter {
-        border: 3px solid #5384ED !important;
+        border: 3px solid #5384ed9d !important;
     }
-    .stepper-item.completed::after {
-        top: 4px !important;
+    .stepper-item.active .step-counter {
+        border: 3px solid #5384ED !important;
     }
     .step-name {
         font-size: 8px !important;
@@ -263,10 +266,6 @@
     .heightL {
         height: 13rem !important;
     }
-    .body-h-project {
-        flex-direction: column !important;
-        height: 40vh !important;
-    }
     .text-center {
         text-align: center;
     }
@@ -364,10 +363,7 @@
     /* header */
     /* body */
     .blankVer {
-        display: none !important;
-    }
-    .body-h {
-        margin-bottom: 0vh !important;
+        height: 2rem !important;
     }
     .intro {
         flex-direction: column !important;
@@ -460,33 +456,36 @@
 }
 
 @media screen and (min-width:1920px) {
-    .marginAll1920 {
+    body .marginAll1920 {
         margin: 0px 42vh !important;
     }
-    .widthS1920 {
-        width: 23rem !important;
+    body .marginAllL1920 {
+        margin: 0px 50vh;
     }
-    .widthM1920 {
-        width: 23vw !important;
+    body .Nav {
+        top: 23%;
+    }
+    body .blankHL1920 {
+        height: 25.0vh;
+    }
+    body .widthS1920 {
+        width: 23rem;
+    }
+    body .widthM1920 {
+        width: 23vw;
         margin: 0;
     }
-    .widthMM1920 {
-        width: 25vw !important;
+    body .widthMM1920 {
+        width: 25vw;
     }
-    .widthL1920 {
-        width: 70rem!important;
+    body .widthL1920 {
+        width: 70rem;
     }
-    .Nav {
-        top: 23% !important;
+    body .carousel {
+        height: 28vw;
     }
-    .carousel {
-        height: 28vw !important;
-    }
-    .blankHL1920 {
-        height: 25.0vh !important;
-    }
-    .heightS1920 {
-        height: 15rem !important;
+    body .heightS1920 {
+        height: 15rem;
     }
 }
 
@@ -557,7 +556,15 @@ body {
     border-radius: 20px;
     border: none;
 }
-
+.lineHorizSGH {
+    margin: 1.0rem 3rem;
+    display: block;
+    height: 4px;
+    width: 40px;
+    background-color: #4C665B;
+    border-radius: 20px;
+    border: none;
+}
 .lineVerAll-mp {
     border-left: 1px solid rgba(0, 0, 0, 0.23);
     height: 20vh;
@@ -580,7 +587,7 @@ body {
 }
 
 .researchArr {
-    margin: 6rem 3rem;
+    margin: 7.5rem 3rem;
     border: solid black;
     border-width: 0 1px 1px 0;
     display: inline-block;
@@ -687,6 +694,9 @@ body {
 .colorGHBg {
     background-color: #EAF0EE;
 }
+.colorGHbg1 {
+    color: #4C665B;
+}
 
 .colorMP {
     color: #FED256;
@@ -706,6 +716,19 @@ body {
 
 .colorGrey {
     background-color: #F5F5F5;
+}
+
+.bgGrey {
+    background-color: #f5f5f5;
+    margin: 0;
+}
+
+.tColorAM {
+    color: #d9e0f0;
+}
+
+.colorWtBg {
+    background-color: #ffffff;
 }
 
 .shadowOnly {
@@ -830,11 +853,10 @@ body {
 
 .widthIconS {
     width: 1.5rem;
-    margin-right: 10px;
 }
 
 .widthLogo {
-    width: 6vh;
+    width: 3rem;
     margin: 9px;
 }
 
@@ -957,10 +979,13 @@ body {
     transform: translateZ(0);
 }
 
+
 .float:hover {
     transform: translateY(-15px);
-    box-shadow: 0 29px 38px 0 rgba(0, 0, 0, 0.096), 0 36px 68px 0 rgba(0, 0, 0, 0.075);
+    filter: drop-shadow(15px 10px 15px rgba(143, 143, 143, 0.404));
 }
+
+
 
 @keyframes hover-float {
     50% {
@@ -1020,7 +1045,6 @@ ul {
     list-style-position: inside;
     margin: 0;
     padding: 0;
-    
     list-style-type: none;
 }
 
@@ -1128,25 +1152,6 @@ strong {
     width: 2vw;
     height: 2vw;
     padding: 1vw;
-}
-
-.bgGrey {
-    background-color: #f5f5f5;
-    margin: 0;
-}
-
-.tColorAM {
-    color: #d9e0f0;
-}
-
-.bg-colorMP {
-    background-color: #FED256;
-    margin: 0;
-    height: 60vw;
-}
-
-.colorWtBg {
-    background-color: #ffffff;
 }
 
 .marquee {
@@ -1786,13 +1791,6 @@ button {
     margin: 0px/* top&bottom*/
     0px/* left&right*/
     ;
-}
-
-.body-h {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
 }
 
 /* intro */
