--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 @media screen and (max-width: 950px) {
-    .centerPhone {
+    body .centerPhone {
         display: flex;
-        justify-content: center !important;
-        align-items: center !important;
+        justify-content: center;
+        align-items: center;
     }
     .alignCPH {
         align-items: center !important;
@@ -21,7 +21,7 @@
     .widthL {
         width: 20rem !important;
     }
-    .widthMPHoneH {
+    .widthMPhHalf {
         width: 10rem !important;
     }
     .widthIconM {
@@ -33,8 +33,8 @@
     .widthS {
         width: 20rem !important;
     }
-    .widthXS {
-        width: 20rem !important;
+    body .widthXS {
+        width: 20rem;
         margin: 0;
     }
     .widthMM {
@@ -66,6 +66,9 @@
     }
     .titleS {
         font-size: 8px !important;
+    }
+    body .titleXS {
+        font-size: 8px;
     }
     .textL {
         font-size: 13px !important;
@@ -463,7 +466,7 @@
         margin: 0px 50vh;
     }
     body .Nav {
-        top: 23%;
+        top: 20%;
     }
     body .blankHL1920 {
         height: 25.0vh;
@@ -536,7 +539,8 @@ body {
 .lineVerS {
     border-left: 1px solid gray;
     height: 5.0rem;
-    margin: 0vw 5vw;
+    margin: 0vw 2vw;
+    opacity: 0.5;
 }
 
 .lineHoriz {
@@ -548,14 +552,15 @@ body {
 }
 
 .lineHorizS {
-    margin: 1.0rem 2rem;
     display: block;
-    height: 6px;
-    width: 40px;
+    margin: 7px 0;
+    height: 4px;
+    width: 30px;
     background-color: #5384ED;
     border-radius: 20px;
     border: none;
 }
+
 .lineHorizSGH {
     margin: 1.0rem 3rem;
     display: block;
@@ -565,6 +570,7 @@ body {
     border-radius: 20px;
     border: none;
 }
+
 .lineVerAll-mp {
     border-left: 1px solid rgba(0, 0, 0, 0.23);
     height: 20vh;
@@ -646,6 +652,12 @@ body {
     justify-content: flex-start;
 }
 
+.align-bottom {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
 .align-right {
     display: flex;
     align-items: flex-end;
@@ -694,6 +706,7 @@ body {
 .colorGHBg {
     background-color: #EAF0EE;
 }
+
 .colorGHbg1 {
     color: #4C665B;
 }
@@ -716,11 +729,6 @@ body {
 
 .colorGrey {
     background-color: #F5F5F5;
-}
-
-.bgGrey {
-    background-color: #f5f5f5;
-    margin: 0;
 }
 
 .tColorAM {
@@ -890,7 +898,7 @@ body {
     width: 40rem;
 }
 
-.widthMPHoneH {
+.widthMPhHalf {
     width: 40rem;
 }
 
@@ -979,13 +987,10 @@ body {
     transform: translateZ(0);
 }
 
-
 .float:hover {
     transform: translateY(-15px);
     filter: drop-shadow(15px 10px 15px rgba(143, 143, 143, 0.404));
 }
-
-
 
 @keyframes hover-float {
     50% {
@@ -1210,7 +1215,7 @@ strong {
 
 .nav {
     position: absolute;
-    top: 23%;
+    top: 21%;
     width: 60px;
     height: 60px;
     z-index: 2;
@@ -1492,42 +1497,42 @@ button {
 
 .titleL {
     font-weight: 400;
-    font-size: 1.8rem;
+    font-size: 28px;
 }
 
 .titleM {
-    font-size: 1.4rem;
+    font-size: 24px;
     font-weight: 400;
     margin: 0;
 }
 
 .titleS {
-    font-size: 1.2rem;
+    font-size: 18px;
     font-weight: 400;
     margin: 0;
 }
 
 .titleXS {
-    font-size: 0.8rem;
+    font-size: 15px;
     font-weight: 400;
     margin: 0;
 }
 
 .textL {
-    font-size: 1.9rem;
+    font-size: 28px;
     font-weight: 100;
     margin: 0;
 }
 
 .textM {
-    font-size: 1.6rem;
+    font-size: 24px;
     font-weight: 100;
     line-height: 1.6;
     margin: 0;
 }
 
 .textS {
-    font-size: 1.2rem;
+    font-size: 18px;
     font-weight: 100;
     margin: 0;
     line-height: 1.4;
@@ -1875,6 +1880,16 @@ button {
 .step-name {
     font-size: 16px;
 }
+
+.itemList {
+    height: 5px;
+    width: 5px;
+    background-color: #5384ED;
+    border-radius: 50%;
+    display: block;
+    margin: 5px;
+}
+
 
 /* step progress bar */
 
