--- a/main.css
+++ b/main.css
@@ -30,8 +30,8 @@
     #widthRC {
         width: 10rem !important;
     }
-    .widthS {
-        width: 20rem !important;
+    body .widthS {
+        width: 20rem;
     }
     body .widthXS {
         width: 20rem;
@@ -47,7 +47,7 @@
         width: 80vw !important;
     }
     .tTQ {
-        font-size: 10px !important;
+        font-size: 16px !important;
     }
     /* fonts going to delete */
     .t-icon-s {
@@ -99,8 +99,11 @@
         width: 22vh !important;
         border-radius: 50%;
     }
-    .MPslide {
-        opacity: 0.9 !important;
+    body .MPslide {
+        opacity: 0;
+    }
+    body .centerElement {
+        opacity: 1;
     }
     .MPcarousel {
         height: 26rem !important;
@@ -109,7 +112,7 @@
         width: 10px !important;
         height: 10px !important;
         left: 49% !important;
-        bottom: 20% !important;
+        bottom: 10% !important;
     }
     .lineVerAll-mp {
         height: 3rem !important;
@@ -151,9 +154,8 @@
     .blankPhoneS {
         height: 120px !important;
     }
-    .centeredTQ {
-        height: 10px;
-        bottom: 12% !important;
+    body .centeredTQ {
+        bottom: -15px;
     }
     .marginInner {
         margin: 0 6vh !important;
@@ -170,15 +172,15 @@
         font-weight: 100;
         margin: 0;
     }
-    .textNos {
-        font-size: 50px !important;
-        margin: 2% 0 !important;
+    body .textNos {
+        font-size: 50px;
+        margin: 8vh 0;
     }
     table {
         font-size: 0.3rem !important;
     }
-    .blankHXS {
-        height: 1rem !important;
+    body .blankHXS {
+        height: 2px;
     }
     .blankHS {
         height: 1.5rem !important;
@@ -429,23 +431,18 @@
     /* about me */
     /* about me */
     /* footer */
-    .footer {
-        flex-direction: column !important;
-        height: 90px !important;
+    body .footer {
+        height: 90px;
     }
-    .footer-left {
-        justify-content: center !important;
-        font-size: 12px !important;
-        margin-top: 20px !important;
-        margin-left: 0px !important;
-        margin-right: 0px !important;
+    body .footer-left {
+        font-size: 10px;
     }
     .footer-right {
-        margin: 0px !important;
+        margin: 0px !;
     }
-    .footer-logo {
-        margin: 20px/* top&bottom*/
-        10px !important/* left&right*/
+    body .footer-logo {
+        margin: 4px;
+        width: 12px;
     }
     #bottom-arrow {
         height: 128px;
@@ -460,7 +457,7 @@
 
 @media screen and (min-width:1920px) {
     body .marginAll1920 {
-        margin: 0px 42vh !important;
+        margin: 0px 22vw;
     }
     body .marginAllL1920 {
         margin: 0px 50vh;
@@ -471,8 +468,8 @@
     body .blankHL1920 {
         height: 25.0vh;
     }
-    body .widthS1920 {
-        width: 23rem;
+    body .widthS {
+        width: 35rem;
     }
     body .widthM1920 {
         width: 23vw;
@@ -490,11 +487,14 @@
     body .heightS1920 {
         height: 15rem;
     }
+   body .blankHS {
+        display: block;
+        height: 8rem;
+    }
 }
 
 body {
     font-family: 'Lato', sans-serif;
-    color: #2E2E2E;
 }
 
 /* Geometry*/
@@ -522,10 +522,13 @@ body {
 }
 
 .lineHorizAll-mp {
-    border-top: 1px solid #FFBF00;
-    height: 0px;
-    width: 6vh;
-    margin: 3vh 0;
+    display: block;
+    margin: 15px 0;
+    height: 4px;
+    width: 30px;
+    background-color: #FFBF00;
+    border-radius: 20px;
+    border: none;
 }
 
 .lineVerAll {
@@ -573,7 +576,7 @@ body {
 
 .lineVerAll-mp {
     border-left: 1px solid rgba(0, 0, 0, 0.23);
-    height: 20vh;
+    height: 180px;
     margin: 5vh;
 }
 
@@ -593,7 +596,7 @@ body {
 }
 
 .researchArr {
-    margin: 7.5rem 3rem;
+    margin: 6rem 3rem;
     border: solid black;
     border-width: 0 1px 1px 0;
     display: inline-block;
@@ -612,12 +615,6 @@ body {
 .circle-mp {
     height: 12rem;
     width: 12rem;
-    border-radius: 50%;
-}
-
-.circle-mp-s {
-    height: 4vw;
-    width: 4vw;
     border-radius: 50%;
 }
 
@@ -762,7 +759,7 @@ body {
 /* margin and padding*/
 
 .marginAll {
-    margin: 0px 14vh;
+    margin: 0px 10vw;
 }
 
 .marginAllL {
@@ -860,7 +857,8 @@ body {
 /* width and height */
 
 .widthIconS {
-    width: 1.5rem;
+    width: 1.8rem;
+    margin: 3px;
 }
 
 .widthLogo {
@@ -1081,8 +1079,8 @@ a:link.textProject {
 }
 
 .inactive {
-    color: grey;
-    font-weight: 100;
+    color: #858585;
+    font-weight: 300;
 }
 
 img {
@@ -1098,6 +1096,7 @@ svg {
 
 strong {
     font-weight: 300;
+    color: #323232;
 }
 
 .zTop {
@@ -1151,12 +1150,6 @@ strong {
     display: block;
     animation-name: carousel-animation;
     animation-duration: 2s;
-}
-
-.mp-featureicons {
-    width: 2vw;
-    height: 2vw;
-    padding: 1vw;
 }
 
 .marquee {
@@ -1491,7 +1484,7 @@ button {
     text-transform: uppercase;
 }
 
-.styleItalic {
+.textItalic {
     font-style: italic;
 }
 
@@ -1519,21 +1512,24 @@ button {
 }
 
 .textL {
+    color: #858585;
     font-size: 28px;
-    font-weight: 100;
+    font-weight: 300;
     margin: 0;
 }
 
 .textM {
+    color: #858585;
     font-size: 24px;
-    font-weight: 100;
+    font-weight: 300;
     line-height: 1.6;
     margin: 0;
 }
 
 .textS {
+    color: #858585;
     font-size: 18px;
-    font-weight: 100;
+    font-weight: 300;
     margin: 0;
     line-height: 1.4;
 }
@@ -1750,7 +1746,7 @@ button {
 
 .tTQ {
     font-family: 'Lato', sans-serif;
-    font-size: 2.0rem;
+    font-size: 2.6rem;
     line-height: 1.6;
     font-weight: 300;
     margin: 0;
@@ -1763,7 +1759,7 @@ button {
 
 .centeredTQ {
     position: absolute;
-    bottom: 0%;
+    bottom: 3%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -1890,7 +1886,6 @@ button {
     margin: 5px;
 }
 
-
 /* step progress bar */
 
 /* back to top btn */
@@ -1955,10 +1950,8 @@ button {
 }
 
 .footer-logo {
-    margin: 15px/* top&bottom*/
-    12px/* left&right*/
-    ;
-    width: 60%;
+    margin: 15px;
+    width: 30px;
     height: auto;
     cursor: pointer;
 }
