--- a/main.css
+++ b/main.css
@@ -204,7 +204,7 @@
     }
 
     body .blankProject {
-        height: 280px;
+        height: 230px;
     }
 
     body .blankProjectS {
@@ -433,7 +433,7 @@
 
     /* header */
     body .main-tool-bar {
-        height: 200px;
+        height: 160px;
         flex-direction: column;
     }
 
@@ -448,6 +448,7 @@
         flex-direction: column;
         align-items: center;
         font-size: 20px;
+        margin-top: 0;
         margin-left: 0px;
         margin-right: 0px;
         margin-bottom: 12px;
@@ -478,11 +479,12 @@
         font-family: 'Lato', sans-serif;
         font-size: 3rem;
     }
-
+    body .t-me {
+        font-size: 1.5em;
+    }
 
     body .t-intro {
-        font-size: 2.8vh;
-
+        display: none;
     }
 
     body .divider {
@@ -589,9 +591,13 @@
         font-size: 5rem;
     }
 
+    body .t-me {
+        font-weight: 400;
+        font-size: 3.5em;
+    }
 
     body .t-intro {
-        font-size: 2.8vh;
+        font-size: 4.8vh;
 
     }
 
@@ -1792,7 +1798,6 @@ body .carousel .carousel-item {
 /* MP Carousel */
 
 /* Photography */
-
 .carouselVW {
     display: flex;
     flex-direction: row;
@@ -1834,16 +1839,6 @@ button {
 
 /* Photography */
 
-/* about me */
-
-.about-me {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin: 0;
-}
-
 /* fonts going to delete */
 
 .content-tl {
@@ -1878,7 +1873,7 @@ button {
 
 /* fonts going to delete */
 
-/* text general*/
+/* text*/
 
 .styleCap {
     text-transform: uppercase;
@@ -1959,13 +1954,9 @@ button {
     margin: 0;
 }
 
-/* text general*/
+/* text */
 
-/* text special*/
 
-/* text special*/
-
-/* delete soon */
 
 .body-img {
     width: 50%;
@@ -2011,30 +2002,34 @@ button {
 
 /* about me */
 
-/*progress bar*/
+/*progressBarScroll*/
 
 .header {
+z-index: 99;
     position: fixed;
-    top: 0px;
-    left: 0px;
-    z-index: 4;
+    top: 0;
     width: 100%;
-    background-color: #f1f1f1;
 }
 
 .progress-container {
+
+    background-color: rgba(150, 150, 150, 0.6);
+    height: 8px;
     width: 100%;
-    height: 5px;
-    background: whitesmoke;
 }
 
 .progress-bar {
-    height: 3px;
-    background: black;
+
+    background-color: #464646;
+    height: 8px;
     width: 0%;
 }
 
-/*progress bar*/
+.content {
+    padding: 2em;
+}
+
+/*progressBarScroll*/
 
 /*head tool bar scroll*/
 
@@ -2082,6 +2077,8 @@ button {
     margin-right: 8%;
 }
 
+/*head tool bar scroll end*/
+
 /* blur hover*/
 
 .box {
@@ -2107,8 +2104,6 @@ button {
 }
 
 /* blur hover*/
-
-/*head tool bar scroll end*/
 
 /* intro */
 
@@ -2350,6 +2345,7 @@ button {
 
 /* back to top */
 
+/* footer */
 .footer {
     align-items: center;
     display: flex;
@@ -2389,10 +2385,4 @@ button {
     cursor: pointer;
 }
 
-/* ------------about--font-size-containers----body----------------- */
-
-/* ------------abput--font-size-containers----body----------------- */
-
-/* ---------------------------unique------------------------- */
-
-/* --------------------unique--------body----------------- */
+/* footer */
