--- a/main.css
+++ b/main.css
@@ -176,9 +176,9 @@ main>nav {}
 .section-nav {
     background-color: var(--white);
     opacity: 0.8;
-    z-index: 99;
     padding-left: 0;
     border-left: 1px solid var(--grey-light);
+    z-index: 3;
 
     position: sticky;
     margin-left: 80%;
@@ -212,7 +212,7 @@ main>nav {}
 
 
 .section-nav.SEER a:hover,
-.section-nav a:focus{
+.section-nav a:focus {
     color: var(--seer-purple);
 }
 
@@ -1667,7 +1667,9 @@ a.nav-link:hover {
     margin: 0;
 }
 
-
+.colorAPPOINTA {
+    color: var(--APPOINTA-blue);
+}
 
 
 .colorGreen {
@@ -2540,15 +2542,19 @@ a:link.textProject {
 .active a {
     font-weight: 400;
 }
-.active.greenNav a{
-    color: var(--green) ;
+
+.active.greenNav a {
+    color: var(--green);
 }
-.active.appointa a{
-    color: var(--APPOINTA-blue) ;
+
+.active.appointa a {
+    color: var(--APPOINTA-blue);
 }
-.active.seer a{
-    color: var(--seer-purple) ;
+
+.active.seer a {
+    color: var(--seer-purple);
 }
+
 .inactive {
     color: #858585;
     font-weight: 300;
@@ -2559,7 +2565,115 @@ img {
     height: auto;
 }
 
+/* imgModal */
+.modal-target {
 
+    cursor: zoom-in;
+    transition: 0.3s;
+}
+
+.modal-target:hover {
+    -webkit-transition: all 120ms ease-in;
+    -webkit-transform: scale(1.01);
+    -ms-transition: all 120ms ease-in;
+    -ms-transform: scale(1.01);   
+    -moz-transition: all 120ms ease-in;
+    -moz-transform: scale(1.01);
+    transition: all 120ms ease-in;
+    transform: scale(1.01);}
+
+/* The Modal (background) */
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 4;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(255, 255, 255);
+    /* Fallback color */
+    background-color: rgba(255, 255, 255, 0.96);
+    /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 95%;
+    opacity: 1 !important;
+}
+
+/* Caption of Modal Image */
+.modal-caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 1200px;
+    text-align: center;
+    color: white;
+    font-weight: 700;
+    font-size: 1em;
+    margin-top: 32px;
+}
+
+/* Add Animation */
+.modal-content, .modal-caption {
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+    from {
+        -webkit-atransform: scale(0)
+    }
+
+    to {
+        -webkit-transform: scale(1)
+    }
+}
+
+@keyframes zoom {
+    from {
+        transform: scale(0)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+/* The Close Button */
+.modal-close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: var(--grey-darkest);
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+    color: var(--black-less);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* imgModal */
 
 svg {
     width: 100%;
