--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
 html {
     scroll-behavior: smooth;
     height: 100%;
+    color: var(--black-less);
 
 }
 
@@ -10,10 +11,13 @@ html {
     /* Color */
     --white: #ffffff;
     --alert: #CC3300;
-    --black: #131313;
-    --black-less: #505050;
+    --black: #161616;
+    --black-less: #454549;
+    /* #505050*/
 
-    --grey-darkest: #909090;
+    --grey-darkest: #8d929a;
+        /* #909090*/
+
     --grey-dark: #c8c8c8;
     --grey-normal: #e4e4e4;
     --grey-light: #efefef;
@@ -50,7 +54,6 @@ html {
 
 body {
     font-family: 'Lato', sans-serif;
-    color: var(--black);
 }
 
 .BGseer1 {
@@ -267,6 +270,7 @@ section {
 h1, h2 {
     font-family: inherit;
     font-weight: 600;
+
     margin: 1em 0;
 }
 
@@ -277,7 +281,6 @@ h1, h2 {
 h3, h4 {
     font-family: inherit;
     font-weight: 300;
-    color: var(--black-less);
     margin: 1.2em 0;
 
 }
@@ -1014,7 +1017,7 @@ button.passwordArr {
 
     a.nav-link {
         margin: 1rem 0;
-        color: #333;
+        color: var(--black-less);
         z-index: 1;
     }
 
@@ -1460,6 +1463,7 @@ button.passwordArr {
     font-size: 2rem;
     font-weight: 500;
     /* margin-right: 8%; */
+    color: var(--black-less);
 }
 
 .wrapper {
@@ -1473,7 +1477,7 @@ button.passwordArr {
     left: 0;
     right: 0;
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 1240px;
     width: 100%;
     height: 5em;
     text-align: center;
@@ -1570,12 +1574,15 @@ button.passwordArr {
 a.nav-link {
     text-decoration: none;
     font-size: 1.5rem;
+    font-weight: 300;
     -webkit-transition: 0.5s;
     transition: 0.5s;
+    color: var(--grey-darkest);
+
 }
 
 a.nav-link:hover {
-    color: none;
+    color: var(--black);
 }
 
 .hamburger {
@@ -2053,7 +2060,7 @@ a.nav-link:hover {
 }
 
 .t-intro {
-    font-weight: 100;
+    font-weight: 200;
     font-size: 2em;
     line-height: 1.2;
 }
@@ -2577,6 +2584,7 @@ a:link.textProject {
 
 .active a {
     font-weight: 400;
+    color: var(--black);
 }
 
 .active.greenNav a {
@@ -2592,7 +2600,7 @@ a:link.textProject {
 }
 
 .inactive {
-    color: #858585;
+    color: var(--grey-darkest);
     font-weight: 300;
 }
 
