--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
 
+
+
 html {
     scroll-behavior: smooth;
     height: 100%;
@@ -12,11 +14,11 @@ html {
     --white: #ffffff;
     --alert: #CC3300;
     --black: #161616;
-    --black-less: #454549;
+    --black-less: #5f6368;
     /* #505050*/
 
     --grey-darkest: #8d929a;
-        /* #909090*/
+    /* #909090*/
 
     --grey-dark: #c8c8c8;
     --grey-normal: #e4e4e4;
@@ -298,9 +300,11 @@ h5, h6 {
     text-decoration-style: double;
     text-decoration-thickness: 1px;
 }
+
 .textDecor.SEER {
     text-decoration-color: var(--seer-purple);
 }
+
 .textDecor.APPOINTA {
     text-decoration-color: var(--APPOINTA-blue);
 }
@@ -308,6 +312,7 @@ h5, h6 {
 .textDecor.GREEN {
     text-decoration-color: var(--green-light);
 }
+
 .textDecor.WS {
     text-decoration-color: var(--WS-Blue);
 }
@@ -413,6 +418,7 @@ hr {
     opacity: 0.7;
     filter: alpha(opacity=70); */
 }
+
 .elementCard.WS:hover {
     cursor: pointer;
     border-bottom: 5px solid var(--WS-Blue);
@@ -938,6 +944,7 @@ button.passwordArr {
         /*  10% opaque green */
 
     }
+
     body .nav-menu {
         top: 20.6em;
     }
@@ -1147,6 +1154,28 @@ button.passwordArr {
     .navigation li:last-of-type a {
         border-bottom: none;
     }
+
+    body #flex-container {
+
+        height: 520px;
+        /* position: absolute; */
+    }
+
+
+    body label {
+        width: 95%;
+    }
+
+    body input:checked~label {
+        border-bottom: solid 1px var(--APPOINTA-blue);
+        border-right: none;
+    }
+
+    body .content-test {
+        right: 0;
+
+    }
+
 }
 
 /*===========================================*/
@@ -1315,6 +1344,188 @@ button.passwordArr {
 /* ------------------- Responsive grid -------------------*/
 
 
+/* ============= Begin Testimonial Flexbox ============ */
+#flex-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 100%;
+    height: 110vh;
+    margin: auto;
+    background-color: var(--white);
+
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    position: relative;
+}
+
+#left-zone {
+    height: 50%;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+}
+
+#left-zone .list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    list-style: none;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    margin: auto;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.item input {
+    display: none;
+}
+
+label {
+    display: block;
+    opacity: 0.5;
+    height: 46px;
+    text-align: center;
+    line-height: 46px;
+    position: relative;
+    color: var(--black-less);
+}
+
+label:hover {
+    opacity: 0.75;
+    cursor: pointer;
+    background-color: var(--grey-lightest);
+}
+
+.content-test {
+    position: absolute;
+    right: 5%;
+    bottom: 0;
+    opacity: 0;
+    -webkit-transform: translateY(100%);
+    -ms-transform: translateY(100%);
+    transform: translateY(100%);
+    height: 40%;
+    width: 100%;
+    -webkit-transition: 0.5s ease-out;
+    -o-transition: 0.5s ease-out;
+    transition: 0.5s ease-out;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    pointer-events: none;
+}
+
+.content-test p {
+    max-width: 50%;
+    text-align: center;
+}
+
+#right-zone {
+    width: 100%;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+    height: 50%;
+}
+
+input:checked~.content-test {
+    -webkit-transform: translateY(0%);
+    -ms-transform: translateY(0%);
+    transform: translateY(0%);
+    -webkit-transition: -webkit-transform 1s;
+    transition: -webkit-transform 1s;
+    -o-transition: transform 1s;
+    transition: transform 1s;
+    transition: transform 1s, -webkit-transform 1s;
+    opacity: 1;
+}
+
+@media (min-width: 480px) {
+    #flex-container {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        min-height: auto;
+        height: 600px;
+        /* position: absolute; */
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
+
+    #left-zone .list {
+        border-right: 2px solid var(--grey-normal);
+    }
+
+    .content-test {
+        width: 70%;
+        height: 100%;
+        pointer-events: auto;
+        -webkit-transform: translateY(100%);
+        -ms-transform: translateY(100%);
+        transform: translateY(100%);
+    }
+
+    #left-zone {
+        width: 20%;
+    }
+
+    #right-zone {
+        height: 100%;
+        width: 80%;
+    }
+}
+
+input:checked~label {
+    opacity: 1;
+    -webkit-animation: all 1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    animation: all 1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+
+input:checked~label {
+    color: var(--APPOINTA-blue);
+    border-right: solid 4px var(--APPOINTA-blue);
+}
+
+
+/* ============== End Testimonial Flexbox ============= */
 
 
 
@@ -1432,11 +1643,13 @@ button.passwordArr {
     height: 3px;
     width: 0%;
 }
+
 .progress-bar.WS {
     background-color: var(--WS-Blue);
     height: 3px;
     width: 0%;
 }
+
 /*progressBarScroll*/
 
 
@@ -1699,6 +1912,7 @@ a.nav-link:hover {
 .colorAPPOINTA {
     color: var(--APPOINTA-blue);
 }
+
 .colorWS {
     color: var(--WS-Blue);
 }
@@ -1763,9 +1977,11 @@ a.nav-link:hover {
 .shadowFilter {
     filter: drop-shadow(3px 2px 2px rgba(143, 143, 143, 0.404));
 }
+
 .shadowFilterL {
     filter: drop-shadow(3px 20px 20px rgba(129, 139, 161, 0.304));
 }
+
 .clip-shape-shadow {
     filter: drop-shadow(20px 40px 25px rgba(124, 84, 10, 0.404));
 }
@@ -1928,9 +2144,11 @@ a.nav-link:hover {
 .lineHorizS.AP {
     background-color: var(--APPOINTA-blue);
 }
+
 .lineHorizS.WS {
-    background-color:var(--WS-Blue);
+    background-color: var(--WS-Blue);
 }
+
 .lineHorizS.SEER {
     background-color: var(--seer-purple);
 
@@ -2007,10 +2225,12 @@ a.nav-link:hover {
     border-left: 5px solid var(--APPOINTA-blue);
     padding-left: 1em;
 }
+
 .leftVerLine.WS {
     border-left: 5px solid var(--WS-Blue);
     padding-left: 1em;
 }
+
 .ver-line {
     border-left: 1px solid gray;
     height: 15.0vh;
