--- a/main.css
+++ b/main.css
@@ -774,6 +774,11 @@ button.passwordArr {
 /* changed media query from 800 to 1000*/
 
 @media all and (max-width: 1080px) {
+    .font300-1080 {
+        font-weight: 300 !important;
+
+    }
+
     body .heightS {
         height: 16rem;
     }
@@ -931,7 +936,7 @@ button.passwordArr {
 
     body .hamburger {
         display: block;
-        padding: 2em;
+        padding: 2.5em;
         width: 2em;
     }
 
@@ -1029,7 +1034,6 @@ button.passwordArr {
     }
 
 
-
     .active {
         right: 0;
         z-index: 100;
@@ -1090,7 +1094,7 @@ button.passwordArr {
     }
 
     body .hamburger {
-        padding: 1.7em;
+        padding: 2em;
     }
 
     body .se-arrow {
@@ -1811,8 +1815,8 @@ a.nav-link:hover {
     margin: 6px;
     -webkit-transition: 0.5s;
     transition: 0.5s;
-    color: var(--black);
-    background-color: var(--black);
+    color: var(--green);
+    background-color: var(--green);
 }
 
 .bar:nth-child(1) {
@@ -2803,7 +2807,7 @@ a:link.textProject {
 }
 
 .active a {
-    font-weight: 300;
+    font-weight: 500;
     color: var(--black);
 }
 
